...
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/ic_baseline_person_24" />

            <EditText
                android:id="@+id/signInEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/shape_text_edit"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textSize="18sp"
                android:elevation="5dp"/>

            <EditText
                android:id="@+id/signInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_text_edit"
...
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="18sp"
                android:elevation="5dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInLoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/black"
                android:padding="10dp"
...
